Salesforce/main/default/main/default/objects/Contact/fields/Asistente_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Asistente_Tecnico__c</fullName>
    <description>Nombre de la persona que realiza la asistencia técnica en el reclamo asociado a este contacto.</description>
    <label>Asistente Tecnico</label>
    <length>60</length>
    <type>Text</type>
</CustomField>