Salesforce/main/default/main/default/objects/Contact/fields/Barrio__c.field-meta.xml
<CustomField>
    <fullName>Barrio__c</fullName>
    <label>Barrio</label>
    <type>TextArea</type>
</CustomField>