Salesforce/main/default/main/default/objects/Contact/fields/Cadastro_pela_primeira_vez__c.field-meta.xml
<CustomField>
    <fullName>Cadastro_pela_primeira_vez__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cadastro pela primeira vez</label>
    <type>Checkbox</type>
</CustomField>