Salesforce/main/default/main/default/objects/Contact/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Contactos</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>