Salesforce/main/default/main/default/objects/Contact/fields/CNPJ_CPF_c__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF_c__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CNPJ/CPF</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>