Salesforce/main/default/main/default/objects/Contact/fields/Codigo_SAP__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SAP__c</fullName>
    <label>Código SAP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>