Salesforce/main/default/main/default/objects/Contact/fields/Eliminacion__c.field-meta.xml
<CustomField>
    <fullName>Eliminacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Uso de Sistemas</description>
    <label>Eliminacion</label>
    <type>Checkbox</type>
</CustomField>