Salesforce/main/default/main/default/objects/Contact/fields/Estado_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Estado_Contacto__c</fullName>
    <formula>Cidade__r.Estado__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado Contacto</label>
    <type>Text</type>
</CustomField>