Salesforce/main/default/main/default/objects/Contact/fields/Fecha_Bloqueo_SAP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Bloqueo_SAP__c</fullName>
    <label>Fecha Bloqueo SAP</label>
    <type>Date</type>
</CustomField>