Salesforce/main/default/main/default/objects/Contact/fields/Habilitado_Site_de_multiplicadores__c.field-meta.xml
<CustomField>
    <fullName>Habilitado_Site_de_multiplicadores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habilitado Site de multiplicadores</label>
    <type>Checkbox</type>
</CustomField>