Salesforce/main/default/main/default/objects/Contact/fields/Inscripcion_Estadual__c.field-meta.xml
<CustomField>
    <fullName>Inscripcion_Estadual__c</fullName>
    <description>Si se trata de una Persona Jurídica se debe informar en este campo la Inscripción Estadual.</description>
    <label>Inscrição Estadual</label>
    <type>TextArea</type>
</CustomField>