Salesforce/main/default/main/default/objects/Contact/fields/Origem_Docto__c.field-meta.xml
<CustomField>
    <fullName>Origem_Docto__c</fullName>
    <label>Origem Docto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estatuto</fullName>
            </value>
            <value>
                <fullName>Procuração</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>