Salesforce/main/default/main/default/objects/Contact/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <length>40</length>
    <type>Text</type>
</CustomField>