Salesforce/main/default/main/default/objects/Contact/fields/Persona_Fisica__c.field-meta.xml
<CustomField>
    <fullName>Persona_Fisica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pessoa Fisica</label>
    <type>Checkbox</type>
</CustomField>