Salesforce/main/default/main/default/objects/Contact/fields/Propietario_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Propietario_Anterior__c</fullName>
    <description>Para uso de Sistemas.</description>
    <label>Propietario Anterior</label>
    <length>18</length>
    <type>Text</type>
</CustomField>