Salesforce/main/default/main/default/objects/Contact/fields/Representante__c.field-meta.xml
<CustomField>
    <fullName>Representante__c</fullName>
    <label>Representante</label>
    <length>150</length>
    <type>Text</type>
</CustomField>