Salesforce/main/default/main/default/objects/Contact/fields/Senha__c.field-meta.xml
<CustomField>
    <fullName>Senha__c</fullName>
    <label>Senha</label>
    <length>60</length>
    <type>Text</type>
</CustomField>