Salesforce/main/default/main/default/objects/Contact/fields/Tipo_de_Assinatura__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Assinatura__c</fullName>
    <label>Tipo de Assinatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Em conjunto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>