Salesforce/main/default/main/default/objects/Contact/fields/TipoReg_Anterior__c.field-meta.xml
<CustomField>
    <fullName>TipoReg_Anterior__c</fullName>
    <description>Uso de Sistemas.</description>
    <label>TipoReg Anterior</label>
    <length>35</length>
    <type>Text</type>
</CustomField>