Salesforce/main/default/main/default/objects/Contact/fields/Total_NFe__c.field-meta.xml
<CustomField>
    <fullName>Total_NFe__c</fullName>
    <label>Total NFe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>