Salesforce/main/default/main/default/objects/Contact/fields/Usuario_Reclamos__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Reclamos__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Usuario Reclamos</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>