Salesforce/main/default/main/default/objects/Contact/fields/Valor_Total_Bonificacao_DMValoriza__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Bonificacao_DMValoriza__c</fullName>
    <label>Valor Total Bonificação DMValoriza</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>