Salesforce/main/default/main/default/objects/Contact/fields/Vencimiento_docto__c.field-meta.xml
<CustomField>
    <fullName>Vencimiento_docto__c</fullName>
    <label>Vencimiento docto</label>
    <type>Date</type>
</CustomField>