Salesforce/main/default/main/default/objects/Contact/recordTypes/Destinatario_Bloqueado.recordType-meta.xml
<RecordType>
    <fullName>Destinatario_Bloqueado</fullName>
    <active>true</active>
    <description>Se utiliza para crear los destinatarios como contactos asociados a la cuenta Cliente. Se dan de alta en SAP mediante la interfaz alta cliente.</description>
    <label>Destinatario Bloqueado</label>
</RecordType>