Salesforce/main/default/main/default/objects/Contact/recordTypes/Destinatario_Desbloqueado.recordType-meta.xml
<RecordType>
    <fullName>Destinatario_Desbloqueado</fullName>
    <active>true</active>
    <description>Se utiliza para crear los destinatarios como contactos asociados a la cuenta Cliente. Se dan de alta en SAP mediante la interfaz alta cliente.</description>
    <label>Destinatario Desbloqueado</label>
</RecordType>