Salesforce/main/default/main/default/objects/Contact/recordTypes/Inactivo.recordType-meta.xml
<RecordType>
    <fullName>Inactivo</fullName>
    <active>true</active>
    <label>Inactivo</label>
</RecordType>