Salesforce/main/default/main/default/objects/Contact/validationRules/Inscr_debe_quedar_vacia.validationRule-meta.xml
<ValidationRule>
    <fullName>Inscr_debe_quedar_vacia</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Persona_Fisica__c = TRUE, Inscripcion_Estadual__c &lt;&gt; &apos;&apos;, RecordType.Name = &apos;Destinatario Desbloqueado&apos;)</errorConditionFormula>
    <errorDisplayField>Inscripcion_Estadual__c</errorDisplayField>
    <errorMessage>Se o contato é uma pessoa fisica, não tem que preencher o campo &quot;Inscrição Estadual&quot;</errorMessage>
</ValidationRule>