Salesforce/main/default/main/default/objects/Contact/validationRules/Validar_Direccion.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Direccion</fullName>
    <active>false</active>
    <errorConditionFormula>OR(LEN(MailingStreet) = 0, LEN(MailingCity) = 0, LEN(MailingPostalCode) = 0, LEN(MailingCountry) = 0, LEN(MailingState) = 0)</errorConditionFormula>
    <errorMessage>Tem que preencher todos os campos na direção</errorMessage>
</ValidationRule>