Salesforce/main/default/main/default/objects/Contact/listViews/Cumpleaosdeestemes.listView-meta.xml
<ListView>
    <fullName>Cumpleaosdeestemes</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.BIRTHDATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Cumpleaños de este mes</label>
</ListView>