Salesforce/main/default/main/default/objects/Contact/listViews/Parana.listView-meta.xml
<ListView>
    <fullName>Parana</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>equals</operation>
        <value>PR</value>
    </filters>
    <label>Parana</label>
</ListView>