Salesforce/main/default/main/default/objects/Contact/listViews/Todosloscontactos.listView-meta.xml
<ListView>
    <fullName>Todosloscontactos</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los contactos</label>
    <language>en_US</language>
</ListView>